** Extended gsl_linalg_QRPT_update to handle rectangular matrices.
   Corrected definition of the update formula in the manual for
   both gsl_linalg_QR_update and gsl_linalg_QRPT_update.

** Added routine gsl_linalg_cholesky_invert

** Fixed a bug the simplex algorithm which caused the second highest
   point to be incorrectly equal to the first when the first value was
   the highest, which could cause suboptimal convergence (bug #23192).

** Fixed a problem with convergence for inverse gamma and chisq
   distribitions, gsl_cdf_gamma_{P,Q}inv and gsl_cdf_chisq_{P,Q}inv
   (bug #23101).

** Improved the handling of constant regions in Vegas by eliminating
   spurious excess precision when computing box variances.

** Fixed a potential division by zero in gsl_monte_miser when the
   left/right weight factors decrease below 1.

** Fixed incorrect dimensions check in gsl_matrix_sub{row,column}

* What was new in gsl-1.11:

** The GSL repository and bug database are now hosted at Savannah
   http://savannah.gnu.org/projects/gsl/

** Upgraded to latest libtool, autoconf and automake (libtool-2.2,
   autoconf-2.61, automake-1.10.1)

** Fixed underflow in ODE adaptive step size controller that could
   cause step size to decrease to zero (bug #21933).

** Improved the handling of the asymptotic regime in gsl_sf_bessel_jl.

** Improved the handling of large arguments in cumulative distribution
   functions using the incomplete beta function, such as gsl_cdf_fdist_P.

** Fixed overflow bug in gsl_cdf_hypergeometric_{P,Q} for large
   arguments (bug #22293).

** gsl_ran_gaussian_ziggurat now handles generators with different
   ranges explicitly, to minimise the number of function calls
   required (bug #21820).  Also fixes bug #22446 (rng limit in
   gsl_ran_chisq()).

** Added missing error terms in gsl_sf_exp_mult_e10_e to prevent
   the error being underestimated (bug #22041).  

** Updated some constants to the CODATA 2006 values.
